CREATE TABLE application_settings
(
    key           VARCHAR(255)                NOT NULL,
    value_boolean BOOLEAN                     NOT NULL,
    updated_at    TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    updated_by    UUID,
    CONSTRAINT pk_application_settings PRIMARY KEY (key)
);

CREATE TABLE applications
(
    id               UUID         NOT NULL,
    user_id          UUID         NOT NULL,
    tuition_id       UUID         NOT NULL,
    status           VARCHAR(255) NOT NULL,
    firstname        VARCHAR(255) NOT NULL,
    lastname         VARCHAR(255) NOT NULL,
    middlename       VARCHAR(255),
    birth_date       date         NOT NULL,
    gender           CHAR(1)      NOT NULL,
    jshshir          VARCHAR(255) NOT NULL,
    passport_series  VARCHAR(255) NOT NULL,
    address          VARCHAR(255) NOT NULL,
    additional_phone VARCHAR(255),
    disability       INTEGER      NOT NULL,
    created_at       TIMESTAMP WITHOUT TIME ZONE,
    updated_at       TIMESTAMP WITHOUT TIME ZONE,
    CONSTRAINT pk_applications PRIMARY KEY (id)
);

CREATE TABLE bachelor_certs
(
    id         UUID         NOT NULL,
    user_id    UUID,
    cert_id    VARCHAR(255) NOT NULL,
    university VARCHAR(255) NOT NULL,
    major      VARCHAR(255) NOT NULL,
    gpa        DOUBLE PRECISION,
    CONSTRAINT pk_bachelor_certs PRIMARY KEY (id)
);

CREATE TABLE cert_category
(
    id    INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    title VARCHAR(255)                             NOT NULL,
    type  INTEGER                                  NOT NULL,
    CONSTRAINT pk_cert_category PRIMARY KEY (id)
);

CREATE TABLE certs
(
    id             UUID             NOT NULL,
    application_id UUID             NOT NULL,
    category_id    INTEGER          NOT NULL,
    cert_number    VARCHAR(255)     NOT NULL,
    score          DOUBLE PRECISION NOT NULL,
    file_url       VARCHAR(255)     NOT NULL,
    status         VARCHAR(255),
    created_at     TIMESTAMP WITHOUT TIME ZONE,
    updated_at     TIMESTAMP WITHOUT TIME ZONE,
    CONSTRAINT pk_certs PRIMARY KEY (id)
);

CREATE TABLE contracts
(
    id           UUID NOT NULL,
    contract_url VARCHAR(255),
    exam_id      UUID,
    scale        DOUBLE PRECISION,
    created_at   TIMESTAMP WITHOUT TIME ZONE,
    updated_at   TIMESTAMP WITHOUT TIME ZONE,
    CONSTRAINT pk_contracts PRIMARY KEY (id)
);

CREATE TABLE exam_answers
(
    id          INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    question_id INTEGER,
    is_correct  BOOLEAN,
    answer_text TEXT,
    CONSTRAINT pk_exam_answers PRIMARY KEY (id)
);

CREATE TABLE exam_questions
(
    id            INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    exam_id       UUID,
    question_text TEXT,
    point         DOUBLE PRECISION,
    subject_id    INTEGER,
    CONSTRAINT pk_exam_questions PRIMARY KEY (id)
);

CREATE TABLE exams
(
    id             UUID NOT NULL,
    application_id UUID,
    status         VARCHAR(255),
    duration       INTEGER,
    score          DOUBLE PRECISION,
    completed_at   TIMESTAMP WITHOUT TIME ZONE,
    created_at     TIMESTAMP WITHOUT TIME ZONE,
    updated_at     TIMESTAMP WITHOUT TIME ZONE,
    CONSTRAINT pk_exams PRIMARY KEY (id)
);

CREATE TABLE major
(
    id    INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    title VARCHAR(255)                             NOT NULL,
    CONSTRAINT pk_major PRIMARY KEY (id)
);

CREATE TABLE major_lang
(
    id   INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    lang VARCHAR(255)                             NOT NULL,
    CONSTRAINT pk_major_lang PRIMARY KEY (id)
);

CREATE TABLE major_type
(
    id   INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    type VARCHAR(255)                             NOT NULL,
    CONSTRAINT pk_major_type PRIMARY KEY (id)
);

CREATE TABLE otp_challenges
(
    id           UUID                        NOT NULL,
    phone_number VARCHAR(255)                NOT NULL,
    otp_hash     VARCHAR(255)                NOT NULL,
    status       VARCHAR(255)                NOT NULL,
    expires_at   TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    verified_at  TIMESTAMP WITHOUT TIME ZONE,
    created_at   TIMESTAMP WITHOUT TIME ZONE,
    updated_at   TIMESTAMP WITHOUT TIME ZONE,
    CONSTRAINT pk_otp_challenges PRIMARY KEY (id)
);

CREATE TABLE school_year
(
    id     INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    title  VARCHAR(255)                             NOT NULL,
    active BOOLEAN                                  NOT NULL,
    CONSTRAINT pk_school_year PRIMARY KEY (id)
);

CREATE TABLE sessions
(
    id         UUID                        NOT NULL,
    user_id    UUID                        NOT NULL,
    token      TEXT                        NOT NULL,
    status     VARCHAR(255)                NOT NULL,
    user_agent VARCHAR(255),
    expired_at TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    created_at TIMESTAMP WITHOUT TIME ZONE,
    updated_at TIMESTAMP WITHOUT TIME ZONE,
    CONSTRAINT pk_sessions PRIMARY KEY (id)
);

CREATE TABLE subjects
(
    id              INTEGER GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    title           VARCHAR(255)                             NOT NULL,
    exam_duration   INTEGER,
    total_questions INTEGER,
    CONSTRAINT pk_subjects PRIMARY KEY (id)
);

CREATE TABLE tuition
(
    id            UUID             NOT NULL,
    major_code    INTEGER,
    school_year   INTEGER,
    major_id      INTEGER          NOT NULL,
    subject_id    INTEGER          NOT NULL,
    major_type_id INTEGER          NOT NULL,
    major_lang_id INTEGER          NOT NULL,
    degree        VARCHAR(255)     NOT NULL,
    amount        DOUBLE PRECISION NOT NULL,
    CONSTRAINT pk_tuition PRIMARY KEY (id)
);

CREATE TABLE users
(
    id            UUID         NOT NULL,
    username      VARCHAR(255),
    password_hash VARCHAR(255),
    type          VARCHAR(255) NOT NULL,
    lang          VARCHAR(255) NOT NULL,
    created_at    TIMESTAMP WITHOUT TIME ZONE,
    updated_at    TIMESTAMP WITHOUT TIME ZONE,
    CONSTRAINT pk_users PRIMARY KEY (id)
);

ALTER TABLE contracts
    ADD CONSTRAINT uc_contracts_exam UNIQUE (exam_id);

ALTER TABLE users
    ADD CONSTRAINT uc_users_username UNIQUE (username);

ALTER TABLE applications
    ADD CONSTRAINT FK_APPLICATIONS_ON_TUITION FOREIGN KEY (tuition_id) REFERENCES tuition (id);

ALTER TABLE applications
    ADD CONSTRAINT FK_APPLICATIONS_ON_USER FOREIGN KEY (user_id) REFERENCES users (id);

ALTER TABLE bachelor_certs
    ADD CONSTRAINT FK_BACHELOR_CERTS_ON_USER FOREIGN KEY (user_id) REFERENCES users (id);

ALTER TABLE certs
    ADD CONSTRAINT FK_CERTS_ON_APPLICATION FOREIGN KEY (application_id) REFERENCES applications (id);

ALTER TABLE certs
    ADD CONSTRAINT FK_CERTS_ON_CATEGORY FOREIGN KEY (category_id) REFERENCES cert_category (id);

ALTER TABLE contracts
    ADD CONSTRAINT FK_CONTRACTS_ON_EXAM FOREIGN KEY (exam_id) REFERENCES exams (id);

ALTER TABLE exams
    ADD CONSTRAINT FK_EXAMS_ON_APPLICATION FOREIGN KEY (application_id) REFERENCES applications (id);

ALTER TABLE exam_answers
    ADD CONSTRAINT FK_EXAM_ANSWERS_ON_QUESTION FOREIGN KEY (question_id) REFERENCES exam_questions (id);

ALTER TABLE exam_questions
    ADD CONSTRAINT FK_EXAM_QUESTIONS_ON_EXAM FOREIGN KEY (exam_id) REFERENCES exams (id);

ALTER TABLE exam_questions
    ADD CONSTRAINT FK_EXAM_QUESTIONS_ON_SUBJECT FOREIGN KEY (subject_id) REFERENCES subjects (id);

ALTER TABLE sessions
    ADD CONSTRAINT FK_SESSIONS_ON_USER FOREIGN KEY (user_id) REFERENCES users (id);

ALTER TABLE tuition
    ADD CONSTRAINT FK_TUITION_ON_MAJOR FOREIGN KEY (major_id) REFERENCES major (id);

ALTER TABLE tuition
    ADD CONSTRAINT FK_TUITION_ON_MAJOR_LANG FOREIGN KEY (major_lang_id) REFERENCES major_lang (id);

ALTER TABLE tuition
    ADD CONSTRAINT FK_TUITION_ON_MAJOR_TYPE FOREIGN KEY (major_type_id) REFERENCES major_type (id);

ALTER TABLE tuition
    ADD CONSTRAINT FK_TUITION_ON_SCHOOL_YEAR FOREIGN KEY (school_year) REFERENCES school_year (id);

ALTER TABLE tuition
    ADD CONSTRAINT FK_TUITION_ON_SUBJECT FOREIGN KEY (subject_id) REFERENCES subjects (id);